# symbols

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  symbol.cpp  symbols_config.cppm.in  test_symbol.cpp
examples/: CMakeLists.txt
examples/orbital-motion/: CMakeLists.txt  make_video.py  orbital_mechanics.cpp
src/: symbol.cppm  symbols-core.cppm  symbols-engine.cppm  symbols-operators.cppm  symbols-traits.cppm  symbols.cppm
tests/: .clang-tidy  CMakeLists.txt  test_partial.cpp  test_symbol.cpp  test_utils.cppm
tests/assembly/: CMakeLists.txt  addition_cancellation.cpp  assembly_check.cpp  basic_ops_assembly.cpp  combined_assembly.cpp  complex_ops_assembly.cpp  edge_cases_assembly.cpp  identity_vs_simplified.cpp  mixed_operations.cpp  multiplication_identity.cpp  power_ext_assembly.cpp  power_simplification.cpp  subtraction_cancellation.cpp  zero_addition.cpp
tests/core/: test_ast_checks.cpp  test_partial.cpp  test_safety.cpp  test_symbol.cpp  test_symbol_ids.cpp
tests/integration/: test_comprehensive.cpp  test_coverage_boundary.cpp  test_custom_function.cpp
tests/patterns/: test_advanced_pattern.cpp  test_algebraic_patterns.cpp  test_pattern_matching.cpp  test_rewriting.cpp
tests/simplification/: test_ast_simplification.cpp  test_complex_symbolic_simplification.cpp  test_division_simplification.cpp  test_flattening.cpp  test_power_of_power.cpp  test_power_simplification.cpp  test_simplification.cpp  test_simplification_limits.cpp  test_subexpr_simplify.cpp  test_symbolic_cancellation.cpp  test_unary_simplification.cpp
